---
source: tests/lexer.rs
description: "env() env(\"stuff\")"
expression: "lexer.into_iter().collect::<Vec<rested::lexer::Token>>()"
---
[
    Ident("env") at Location { line: 0, col: 0 },
    LParen("(") at Location { line: 0, col: 3 },
    RParen(")") at Location { line: 0, col: 4 },
    Ident("env") at Location { line: 0, col: 6 },
    LParen("(") at Location { line: 0, col: 9 },
    StringLiteral("\"stuff\"") at Location { line: 0, col: 10 },
    RParen(")") at Location { line: 0, col: 17 },
]
